--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,7 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       # Uncomment to enable notifications
       # - SLACK_WEBHOOK_URL=https://hooks.slack.com/services/XXX/YYY/ZZZ
-    # Default: run in simulation mode with 1 worker
-    command: ["--simulate", "--workers", "1"]
+    command: ["--simulate", "--workers", "1"]  # Default: run in simulation mode with 1 worker
     depends_on:
       - redis
 
