--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "redis>=4.0.0,<6.0.0",
     "celery>=5.2.0,<6.0.0",
     "pyyaml>=6.0",
+    "pydantic>=2.0.0,<3.0.0",
 ]
 
 [project.optional-dependencies]
